登录、首页、菜单、session

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ APP_LOG=daily
 APP_LOG_LEVEL=debug
 APP_URL=http://ap-local.nginx.com
 APP_PLATFORM_ID=1
+APP_TITLE=通用企业权限管理平台
 
 DB_CONNECTION=mysql
 DB_HOST=59.110.231.70
