--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
-		"fideloper/proxy": "~3.3",
+        "fideloper/proxy": "~3.3",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.5.*",
-	    "laravel/tinker": "~1.0",
-	    "myclabs/php-enum": "^1.5"
+        "laravel/tinker": "~1.0",
+        "myclabs/php-enum": "^1.5"
     },
     "require-dev": {
 		"filp/whoops": "~2.0",
