--- a/.env
+++ b/.env
@@ -20,8 +20,8 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+REDIS_HOST=59.110.231.70
+REDIS_PASSWORD=5737034557ef5b8c02c0e46513b98f90
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
